--- a/index.html
+++ b/index.html
@@ -3,12 +3,7 @@
 <head>
 	<meta charset=utf-8 />
 	<title>iConGrabber</title>
-	<link rel="stylesheet" type="text/css" media="screen" href="css/master.css" />
-	<!-- Load jQuery from Google CDN -->
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-	<!--[if IE]>
-		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-	<![endif]-->
+	<link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
 </head>
 
 <body>
@@ -17,12 +12,15 @@
 		<img src="images/logo.gif">
 	</section>
 
-	<!-- Main Input Field -->
+	<!-- Main Search Bar -->
 	<section id="main">
-		<form class="main-form" action="">
-			Input iTunes URL: <input type="url" name="itunes-url" placeholder="paste iTunes App URL here..." spellcheck="false" autofocus>
-			<input type="submit" value="GRAB">
+		<form class="searchBar" onsubmit="search">
+			<input type="text" name="searchTerm" id="searchTerm" placeholder="Search for an app..." spellcheck="false" autofocus>
+			<input type="submit" value="Grab!">
 		</form>
 	</section>
+	
+	<!-- Scripts -->
+	<script type="text/javascript" src="search.js"></script>
 </body>
 </html>
