--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
 <body>
 	<!-- Logo/Page Header -->
 	<section id="page-header">
-		<img src="images/logo.gif">
+		<a href="http://iconfetcher.com"><img src="images/logo.gif"></a>
 	</section>
 
 	<!-- Main Search Bar -->
 	<section id="main">
-		<form class="searchBar" onsubmit="search">
+		<form class="searchBar" onsubmit="search()">
 			<input type="text" name="searchTerm" id="searchTerm" placeholder="Search for an app..." spellcheck="false" autofocus>
 			<input type="submit" value="Grab!">
 		</form>
 	</section>
-	
+
 	<!-- Scripts -->
-	<script type="text/javascript" src="search.js"></script>
+	<script type="text/javascript" src="js/search.js"></script>
 </body>
 </html>
