--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 	<!-- Main Search Bar -->
 	<section id="main">
-		<form class="searchBar" onsubmit="search()">
+		<form class="searchBar" onsubmit="search()" id="searchBar">
 			<input type="text" name="searchTerm" id="searchTerm" placeholder="Search for an app..." spellcheck="false" autofocus>
 			<input type="submit" value="Grab!">
 		</form>
