app now displays app name and app icon in results
need to figure out how to display the items in the following structure
in the HTML

EXAMPLE HTML STRUCTURE FOR EACH APP IN SEARCH RESULTS:
<ul>
    <li>
        <h3>Yahoo News</h3>
        <img src="#">
        <ul>
            <li>Developer name</li>
            <li>URL</li>
        </ul>
    </li>
    <li>
        <h3>Yahoo Weather</h3>
        <img src="#">
        <ul>
            <li>Deverloper</li>
            <li>URL</li>
        </ul>
    </li>
</ul>

--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
 		</form>
 	</section>
 
+	<section>
+		<ul id="list">
+
+		</ul>
+	</section>
+
 	<!-- Scripts -->
 	<script type="text/javascript" src="js/search.js"></script>
 </body>
