iphone keyboard fix
keyboard should now minimize after hitting return on mobile device

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<section class="main">
 			<form id="searchBar" onsubmit="search()">
 				<input type="text" name="searchTerm" id="searchTerm" placeholder="Search an app..." spellcheck="false" autofocus>
-				<input type="submit" value="Grab!" id="button" onclick="visitCount()">
+				<input type="submit" value="Grab!" id="button" onclick="searchCount()">
 			</form>
 		</section>
 
