--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<!-- Logo/Page Header -->
 	<header class="page-header">
 		<a href="index.html" id="logo">
-			<img src="images/logo_old.gif">
+			<img src="images/logo.png">
 			<h1>iConGrabber</h1>
 		</a>
 	</header>
