added instructions and logo subtitle

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 	<header class="page-header">
 		<a href="index.html" id="logo">
 			<img src="images/logo.png">
-			<h1>iConGrabber</h1>
+			<h1>iConGrab</h1>
+			<p>Download full-resolution App Store icons</p>
 		</a>
 	</header>
 
@@ -29,6 +30,7 @@
 		</section>
 
 		<section class="results">
+			<p id="instructions">To download an icon, click it. On mobile devices, tap the image then tap-hold and choose "Save Image."</p>
 			<ul id="list">
 
 			</ul>
